--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                Web Designer &amp; Developer Los Angeles, CA. IxDA and UXPA Member. Electronic Music Producer. Pilot. Backpacker. UC San Diego Alumnus.
+                Web Designer &amp; Developer in Los Angeles, CA. IxDA and UXPA Member. Electronic Music Producer. Pilot. Backpacker. UC San Diego Alumnus.
             </div>
 
         </section>
@@ -53,7 +53,6 @@
 
             <div class="unit pre-one-fourth three-fifths">
                 <a href="https://www.behance.net/gallery/28586535/Minnow">Minnow</a>, <a href="https://github.com/Open-MBEE">OpenMBEE</a>, and a tool that should make prototyping easier for all of us. Stay tuned!<br><br>
-                More <a href="https://www.behance.net/beninada">here</a>, if you&rsquo;re interested.
             </div>
 
         </section>
