--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                <a href="https://www.behance.net/gallery/28586535/Minnow">Minnow</a>, <a href="https://github.com/Open-MBEE">OpenMBEE</a>, and a tool that should make prototyping easier for all of us. Stay tuned!<br><br>
+                <a href="https://www.behance.net/gallery/28586535/Minnow">Minnow</a>, <a href="https://github.com/Open-MBEE">OpenMBEE</a>, and a tool that should make prototyping easier for all of us. Stay tuned!<br>
             </div>
 
         </section>
