--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                <a href="https://twitter.com/beninada">Twitter</a>, <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="http://benthegreat.tumblr.com/">Tumblr</a>, <a href="https://www.pinterest.com/beninada/">Pinterest</a>, <a href="https://instagram.com/beninada">Instagram</a><br><br>
+                <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="https://github.com/beninada">GitHub</a>, <a href="https://twitter.com/beninada">Twitter</a>, <a href="http://benthegreat.tumblr.com/">Tumblr</a>, <a href="https://www.pinterest.com/beninada/">Pinterest</a>, <a href="https://instagram.com/beninada">Instagram</a><br><br>
                 <a href="mailto:me@beninada.com">me@beninada.com</a><br>
                 +1 213 700 8159<br>
             </div>
