--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                Web Designer &amp; Developer in Los Angeles, CA. IxDA and UXPA Member. Electronic Music Producer. Pilot. Backpacker. UC San Diego Alumnus.
+                Web Developer &amp; Designer in Los Angeles, CA. IxDA and UXPA Member. Electronic Music Producer. Pilot. Backpacker. UC San Diego Alumnus.
             </div>
 
         </section>
@@ -52,7 +52,7 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                <a href="https://www.behance.net/gallery/28586535/Minnow">Minnow</a>, <a href="https://github.com/Open-MBEE">OpenMBEE</a>, and a tool that should make prototyping easier for all of us. Stay tuned!<br>
+                <a href="https://thecavinreport.com">Cavin Report</a>, <a href="https://www.behance.net/gallery/28586535/Minnow">Minnow</a>, <a href="https://github.com/Open-MBEE">OpenMBEE</a>, and a tool that should make prototyping easier for all of us. Stay tuned!<br>
             </div>
 
         </section>
