--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Ben Inada is an Interaction Designer at NASA JPL.">
+        <meta name="description" content="Ben Inada is a Web Developer and Designer living in Los Angeles, CA.">
 
-        <title>Ben Inada - Designer / Developer</title>
+        <title>Ben Inada - Web Developer</title>
 
         <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/minified.min.css">
@@ -37,7 +37,7 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                Front End Development<br>
+                Full Stack Development<br>
                 Design Thinking<br>
                 Entrepreneurship<br>
                 Systems Engineering<br>
