--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Ben Inada is a Web Developer and Designer living in Los Angeles, CA.">
+        <meta name="description" content="Ben Inada is a Software Engineer living in Los Angeles, California.">
 
-        <title>Ben Inada - Web Developer</title>
+        <title>Ben Inada - Software Engineer</title>
 
         <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/minified.min.css">
@@ -24,35 +24,8 @@
                 Ben Inada
             </div>
 
-            <div class="unit pre-one-fourth three-fifths">
-                Web Developer &amp; Designer in Los Angeles, CA. IxDA and UXPA Member. Electronic Music Producer. Pilot. Backpacker. UC San Diego Alumnus.
-            </div>
-
-        </section>
-
-        <section class="hats">
-
-            <div class="unit pre-one-tenth half">
-                Hats
-            </div>
-
-            <div class="unit pre-one-fourth three-fifths">
-                Full Stack Development<br>
-                Design Thinking<br>
-                Entrepreneurship<br>
-                Systems Engineering<br>
-            </div>
-
-        </section>
-
-        <section class="projects">
-
-            <div class="unit pre-one-tenth half">
-                Projects
-            </div>
-
-            <div class="unit pre-one-fourth three-fifths">
-                <a href="https://thecavinreport.com">Cavin Report</a>, <a href="https://www.behance.net/gallery/28586535/Minnow">Minnow</a>, <a href="https://github.com/Open-MBEE">OpenMBEE</a>, and a tool that should make prototyping easier for all of us. Stay tuned!<br>
+            <div class="unit pre-one-tenth three-fifths">
+                Software Engineer based in Los Angeles. Also a hobbyist music producer and backpacker.
             </div>
 
         </section>
@@ -60,13 +33,11 @@
         <section class="contact">
 
             <div class="unit pre-one-tenth half">
-                Contact
+                Find Me
             </div>
 
-            <div class="unit pre-one-fourth three-fifths">
-                <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="https://github.com/beninada">GitHub</a>, <a href="https://twitter.com/beninada">Twitter</a>, <a href="http://benthegreat.tumblr.com/">Tumblr</a>, <a href="https://www.pinterest.com/beninada/">Pinterest</a>, <a href="https://instagram.com/beninada">Instagram</a><br><br>
-                <a href="mailto:me@beninada.com">me@beninada.com</a><br>
-                +1 213 700 8159<br>
+            <div class="unit pre-one-tenth three-fifths">
+                <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="https://github.com/beninada">GitHub</a>, <a href="https://twitter.com/beninada">Twitter</a>, <a href="https://www.pinterest.com/beninada/">Pinterest</a>, <a href="https://instagram.com/beninada">Instagram</a><br>
             </div>
 
         </section>
