--- a/index.html
+++ b/index.html
@@ -20,11 +20,11 @@
 
         <section class="summary">
 
-            <div class="unit pre-one-tenth half">
+            <div class="unit pre-one-tenth half" style="color:#555">
                 Ben Inada
             </div>
 
-            <div class="unit pre-one-tenth three-fifths">
+            <div class="unit pre-one-fourth three-fifths">
                 Software Engineer based in Los Angeles. Also a hobbyist music producer and backpacker.
             </div>
 
@@ -32,11 +32,11 @@
 
         <section class="contact">
 
-            <div class="unit pre-one-tenth half">
+            <div class="unit pre-one-tenth half" style="color:#555">
                 Find Me
             </div>
 
-            <div class="unit pre-one-tenth three-fifths">
+            <div class="unit pre-one-fourth three-fifths">
                 <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="https://github.com/beninada">GitHub</a>, <a href="https://twitter.com/beninada">Twitter</a>, <a href="https://www.pinterest.com/beninada/">Pinterest</a>, <a href="https://instagram.com/beninada">Instagram</a><br>
             </div>
 
