--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                Software Engineer based in Los Angeles. Also a hobbyist music producer and backpacker.
+                Software Developer based in Los Angeles. Also an avid music producer, pilot, and backpacker.
             </div>
 
         </section>
