--- a/index.html
+++ b/index.html
@@ -6,11 +6,11 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Ben Inada is a Software Engineer living in Los Angeles, California.">
+        <meta name="description" content="Ben Inada is a Software Developer based in Los Angeles, California.">
 
-        <title>Ben Inada - Software Engineer</title>
+        <title>Ben Inada - Software Developer</title>
 
-        <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet" type="text/css">
+        <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/minified.min.css">
         <link rel="shortcut icon" href="assets/favicon.ico?v=2">
 
@@ -25,7 +25,7 @@
             </div>
 
             <div class="unit pre-one-fourth three-fifths">
-                Software Developer based in Los Angeles. Also an avid music producer, pilot, and backpacker.
+                Software Developer based in Los Angeles building highly scalable web apps. Also an avid music producer, pilot, and backpacker.
             </div>
 
         </section>
