--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </h1>
 
             <div class="unit pre-one-fourth three-fifths">
-                Software Developer based in Los Angeles building highly scalable web apps. Also an avid music producer, pilot, and backpacker.
+                Software Developer based in Los Angeles building highly scalable web apps. Also an avid music producer and backpacker.
             </div>
 
         </section>
