--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
     <head>
-
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Ben Inada is a Software Developer based in Los Angeles, California.">
-
-        <title>Ben Inada - Software Developer</title>
-
+        <meta name="description" content="Ben Inada is a Software Engineer based in Los Angeles, California.">
+        <title>Ben Inada - Software Engineer</title>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/minified.min.css">
         <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👋</text></svg>">
-
-        <!-- Global site tag (gtag.js) - Google Analytics -->
         <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54518434-1"></script>
         <script>
             window.dataLayer = window.dataLayer || [];
@@ -22,35 +16,23 @@
             gtag('js', new Date());
             gtag('config', 'UA-54518434-1');
         </script>
-
     </head>
-
     <body class="grid wider wrap">
-
         <section class="summary">
-
             <h1 class="unit pre-one-tenth half">
                 Ben Inada
             </h1>
-
             <div class="unit pre-one-fourth three-fifths">
-                Software Developer based in Los Angeles building highly scalable web apps. Also an avid music producer and backpacker.
+                Software Engineer based in Los Angeles building highly scalable web apps. Also an avid music producer, pilot, and backpacker.
             </div>
-
         </section>
-
         <section class="contact">
-
             <h1 class="unit pre-one-tenth half">
                 Find Me
             </h1>
-
             <div class="unit pre-one-fourth three-fifths">
                 <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="https://github.com/beninada">GitHub</a>, <a href="https://twitter.com/beninada">Twitter</a>, <a href="https://www.pinterest.com/beninada/">Pinterest</a>, <a href="https://instagram.com/beninada">Instagram</a><br>
             </div>
-
         </section>
-
     </body>
-
 </html>
