--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
                 Ben Inada
             </h1>
             <div class="unit pre-one-fourth three-fifths">
-                Software Engineer based in Los Angeles building highly scalable web apps. Also an avid music producer, pilot, and backpacker.
+                Software Engineering Manager based in Los Angeles working at <a href="https://output.com">Output</a>. Also an avid music producer, pilot, and backpacker.
             </div>
         </section>
         <section class="contact">
             <h1 class="unit pre-one-tenth half">
-                Find Me
+                Connect with Me
             </h1>
             <div class="unit pre-one-fourth three-fifths">
-                <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="https://github.com/beninada">GitHub</a>, <a href="https://twitter.com/beninada">Twitter</a>, <a href="https://www.pinterest.com/beninada/">Pinterest</a>, <a href="https://instagram.com/beninada">Instagram</a><br>
+                <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="https://github.com/beninada">GitHub</a>, <a href="https://twitter.com/beninada">Twitter</a>
             </div>
         </section>
     </body>
