--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 Ben Inada
             </h1>
             <div class="unit pre-one-fourth three-fifths">
-                Software Engineering Manager based in Los Angeles working at <a href="https://output.com">Output</a>. Also an avid music producer, pilot, and backpacker.
+                Software Engineering Manager based in Los Angeles working on music technology at <a href="https://output.com">Output</a>. Also an avid music producer, pilot, and backpacker.
             </div>
         </section>
         <section class="contact">
