--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </section>
         <section class="contact">
-            <h1 class="unit pre-one-tenth half">
+            <h1 class="unit pre-one-tenth">
                 Connect with Me
             </h1>
             <div class="unit pre-one-fourth three-fifths">
