--- a/index.html
+++ b/index.html
@@ -8,14 +8,6 @@
         <title>Ben Inada</title>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/minified.min.css">
-        <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>👋</text></svg>">
-        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-54518434-1"></script>
-        <script>
-            window.dataLayer = window.dataLayer || [];
-            function gtag(){dataLayer.push(arguments);}
-            gtag('js', new Date());
-            gtag('config', 'UA-54518434-1');
-        </script>
     </head>
     <body class="grid wider wrap">
         <section class="summary">
@@ -31,7 +23,7 @@
                 Connect with Me
             </h1>
             <div class="unit pre-one-fourth three-fifths">
-                <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="https://github.com/beninada">GitHub</a>, <a href="https://twitter.com/beninada">Twitter</a>
+                <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="https://github.com/beninada">GitHub</a>
             </div>
         </section>
     </body>
