--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </section>
         <section class="contact">
             <h1 class="unit pre-one-tenth">
-                Connect with Me
+                Contact
             </h1>
             <div class="unit pre-one-fourth three-fifths">
                 <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>, <a href="https://github.com/beninada">GitHub</a>
