--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                 Ben Inada
             </h1>
             <div class="unit pre-one-fourth three-fifths">
-                Engineering Manager based in Los Angeles working on music technology at <a href="https://output.com">Output</a>. Also an avid music producer, pilot, and backpacker. Reachable on <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>.
+                Engineering Manager based in Los Angeles. Also an avid music producer, pilot, and backpacker. Reachable on <a href="https://www.linkedin.com/in/beninada">LinkedIn</a>.
             </div>
         </section>
     </body>
