--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="description" content="Ben Inada is an Engineering Manager based in Los Angeles, California.">
+        <meta name="description" content="Ben Inada is a software engineer based in Los Angeles, California.">
         <title>Ben Inada</title>
         <link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,700" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="css/minified.min.css">
@@ -15,7 +15,7 @@
                 Ben Inada
             </h1>
             <div class="unit pre-one-fourth three-fifths">
-                Engineering Manager based in Los Angeles. Also an avid music producer, pilot, and backpacker. <a href="mailto:me@beninada.com">Contact me</a>.
+                Software engineer based in Los Angeles. Also an avid music producer, pilot, and backpacker. <a href="mailto:me@beninada.com">Contact me</a>.
             </div>
         </section>
     </body>
